--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <body>
 
     <div class = "benzine">
-        <h3 > Haalloooo </h3>
-        <p> hallo </p>
+        <h3 > Brandstof over de vlucht van 24 dagen </h3>
+        <p> De brandstof die wij gebruiker voor de vlucht is binnen 24 dagen leeg. De vlucht naar de Rode Planteet duurt in totaal 24 dagen. We hebben voor de zekerheid altijd extra brandstof bij ons, als er iets gebeurt in de lucht waar wij niet op gerekend hebben. </p>
         <canvas id="line"></canvas> <!--gebruiken om chart te wijzen-->
     </div>
     <div class = "benodigdheden">
