--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     </head>
 
     <body>
-
+    <h1 class="title"> Interplanetary Transport System</h1>
     <div class = "benzine">
         <h3 > Brandstof over de vlucht van 24 dagen </h3>
-        <p> De brandstof die wij gebruiker voor de vlucht is binnen 24 dagen leeg. De vlucht naar de Rode Planteet duurt in totaal 24 dagen. We hebben voor de zekerheid altijd extra brandstof bij ons, als er iets gebeurt in de lucht waar wij niet op gerekend hebben. </p>
+        <p> De brandstof die wij gebruiker voor de vlucht is ongeveer 86.000.000 kilo. De vlucht naar de Rode Planteet duurt in totaal 24 dagen. We hebben voor de zekerheid altijd extra brandstof bij ons, als er iets gebeurt in de lucht waar wij niet op gerekend hebben. Per 4 dagen gaat er ongeveer 14.300.000 kilo brandstof doorheen.  </p>
         <canvas id="line"></canvas> <!--gebruiken om chart te wijzen-->
     </div>
     <div class = "benodigdheden">
-         <h3 > Haalloooo </h3>
-        <p> hallo </p>
+         <h3 > Voedsel voorraden voor alle soorten eters </h3>
+        <p> Wij hebben voor de reis aan jullie gevraagd welk soort eten jullie graag aan boord wilden hebben. Op dit manier hebben wij voor iedereen porties eten. Hieronder kun je in de gaten houden hoeveel porties er nog over zijn van het eten. Het is niet de bedoeling dat je een ander soort eten nuttigd dan wat je vooraf de reis hebt aangegeven. In overleg zou dit eventueel wel kunnen.  </p>
         <canvas id="bar"></canvas> <!--gebruiken om chart te wijzen-->
     </div>
     <div class = "mensen">
-         <h3 > Haalloooo </h3>
-        <p> hallo </p>
+         <h3 > Welke leeftijd catogorie is er aan boord </h3>
+        <p> Hier beneden kun je zien hoeveel procent van de bemanning in dezelfde leeftijdcatogrie zit als jij zelf. Je kan bijvoorbeeld opzoek naar leeftijdsgenoten om de reis nog leuker te maken. Je kan een mooi overzicht zien van welke mensen met welke leeftijd dezelfde keus hebben gemaakt als jij, om in te stappen om naar de Rode Planeet te gaan. </p>
         <canvas id="donut"></canvas> <!--gebruiken om chart te wijzen-->
     </div>
 
